@@ -91,6 +91,10 @@ CVS code -
 	  during wait() and can then call cancel_fork() properly. (DLR)
   do_delete()
 	- Tweak for efficiency. (David Benbennick)
+  do_prev_word()
+	- Switch the last test (current != NULL or not) around to match
+	  the order of the same test in do_next_word() (current ==
+	  NULL).  The results are the same either way. (DLR)
   do_spell()
 	- Tweak for efficiency. (David Benbennick)
 	- Change the statusbar entries used in cases of failure so that
